Whitespace cleanup, accessiblility and seo fixes, keybase.txt, background-image scales for taller browsers

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,56 +1,7 @@
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-body {
-	font-family: "Courier New", Courier, monospace;
-	font-weight: 400;
-	font-style: normal;
-	color: #212121;
-}
-
-button {
-	font-family: "Courier New", Courier, monospace;
-	font-weight: 400;
-	font-style: normal;
-	border: 1px solid #212121;
-	color: #212121;
-	background: transparent;
-	height: 1rem;
-	font-size: 0.75rem
-}
-
-p {
-	margin-bottom: 2rem;
-	-webkit-hyphens: auto;
- 	-moz-hyphens: auto;
-  	-ms-hyphens: auto;
-  	hyphens: auto;
-	text-align:justify;
-}
 
 .App {
 	width:100%;
+	min-height: 100vh;
 	background-position: center;
 	background-size: cover;
 	padding-bottom:2rem;
@@ -124,9 +75,9 @@ p {
 .education > li {
 	margin-bottom: 1rem;
 	-webkit-hyphens: auto;
- 	-moz-hyphens: auto;
-  	-ms-hyphens: auto;
-  	hyphens: auto;
+	-moz-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
 }
 
 .headshot {
