--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+	font-family: "Courier New", Courier, monospace;
+	font-weight: 400;
+	font-style: normal;
+	color: #212121;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+button {
+	font-family: "Courier New", Courier, monospace;
+	font-weight: 400;
+	font-style: normal;
+	border: 1px solid #212121;
+	color: #212121;
+	background: transparent;
+	height: 1rem;
+	font-size: 0.75rem
+}
+
+p {
+	margin-bottom: 2rem;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
+	text-align:justify;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: "Courier New", Courier, monospace;
+	monospace;
 }
